k8s/api-gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: gateway-deployment
  namespace: intelliserve
  labels:
    app: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: api-gateway-api-gateway:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 20
        livenessProbe:
          httpGet:
            path: /live
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 20
        resources:
          requests: 
            cpu: "5m"
            memory: "64Mi"
          limits:
            cpu: "30m"
            memory: "70Mi"
