k8s/api-gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: intelliserve
spec:
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 80
