k8s/api-gateway/apigateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-apigateway
  namespace: intelliserve
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "api.intelliserve.local"
  rules:
  - matches:
    - path:
        type: Exact
        value: /api/v1/infer/
    backendRefs:
    - name: gateway-service
      port: 80
    filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: proxy-timeouts
